--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "react-javascript",
   "version": "1.0.0",
+  "proxy": "http://127.0.0.1:5000",
   "type": "module",
   "description": "React TypeScript on Replit, using Vite bundler",
   "scripts": {
@@ -21,6 +22,7 @@
     "vite": "^5.0.0"
   },
   "dependencies": {
+    "axios": "^1.6.7",
     "react-helmet-async": "^2.0.4",
     "react-router-dom": "^6.22.0"
   }
